fix: Make the league table work better on mobile

--- a/apps/branches/app/[domain]/global.scss
+++ b/apps/branches/app/[domain]/global.scss
@@ -29,7 +29,7 @@ $beige-lighter: #eff0eb;
 @forward 'bulma/sass/themes';
 
 :root {
-  overscroll-behavior: none;
+  overscroll-behavior-x: none;
 }
 
 * {
